# LearnOpenGL

./: .gitignore  CMakeLists.txt
include/: Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Utils.hpp
shaders/: light.frag  light.vert  model_loading.frag  model_loading.vert  shader.frag  shader.vert
src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  glad.c  main.cpp  stb_image.cpp
